@@ -22,7 +22,7 @@ Dist::Zilla::Plugin::Test::Kwalitee         = 2.020000 ; bunch o' fixes
 Dist::Zilla::Plugin::MetaTests              = 0        ; core
 Dist::Zilla::Plugin::Test::MinimumVersion   = 2.000001
 Dist::Zilla::Plugin::MojibakeTests          = 0.2      ; test suite
-Dist::Zilla::Plugin::NoTabsTests            = 0.01
+Dist::Zilla::Plugin::Test::NoTabs           = 0.02     ; new name
 Dist::Zilla::Plugin::PodCoverageTests       = 0        ; core
 Dist::Zilla::Plugin::PodSyntaxTests         = 0        ; core
 Dist::Zilla::Plugin::Test::Portability      = 2.000001
